# 2D-engine

./: CMakeLists.txt
include/: CMakeLists.txt  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MenuButton.cpp  MenuButton.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  game.cpp  game.h  gameobject.cpp  gameobject.h  inputhandler.cpp  inputhandler.h  loaderparams.cpp  loaderparams.h  main.cpp  npc.cpp  npc.h  player.cpp  player.h  res_path.h  sdl_gameobject.cpp  sdl_gameobject.h  texturemanager.cpp  texturemanager.h  vector2d.cpp  vector2d.h
src/: CMakeLists.txt  life_polygon.cpp  main.cpp  res_path.h
tests/: CMakeLists.txt  test_test.cpp
